Fixed prefix-positioning on firefox

--- a/server/public/assets/css/style.css
+++ b/server/public/assets/css/style.css
@@ -1432,7 +1432,8 @@ margin:-1px;
 .channel-finder .input-field .prefix{
     color:white;
     font-size:17px;
-    margin-left: -215px;
+    /*margin-left: -215px;*/
+    left: 0;
 }
 
 .autocomplete-content li .highlight {
